courses/430_programming-languages/assignment-6/tests/error/hw5_error11b.nex
var f : bool;
fun g(x : bool) : bool
{
   if (x)
   {
      return anon (x : int) : int { return x + 1; };
   }
   else
   {
      return true;
   }

   return false;
}
print "should not get here:n";
1 / 0;
   f = g(false);
   print (f);
   print (":n");
   f(2);
